--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "i18next": "^23.11.1",
+    "i18next-browser-languagedetector": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3"
   },
