--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@types/lodash": "^4.17.0",
     "i18next": "^23.11.1",
     "i18next-browser-languagedetector": "^7.2.1",
     "lodash": "^4.17.21",
