--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^3.4.2",
     "@react-pdf/types": "^2.4.1",
     "@types/lodash": "^4.17.0",
@@ -21,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
